k8s/longhorn/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.k8s.sbbh.cloud`)
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    certResolver: default
